[tool.poetry]
name = "ghex"
version = "0.2.0"
description = "A command line GitHub explorer tool"
authors = ["mental <m3nta1@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyGithub = "^1.44.1"
click = "^7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
ghex = "ghex:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
